...
        app:layout_constraintEnd_toStartOf="@+id/down"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/up"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/response_list"
        android:layout_width="344dp"
        android:layout_height="233dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:background="@drawable/down"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="508dp"
        android:layout_marginEnd="160dp"
        android:text="@string/menu"
        app:layout_constraintEnd_toEndOf="parent"
...
